# PaintCustomProgram

./: CMakeLists.txt  Eraser.cpp  Magnifier.cpp  Pencil.cpp  Pencil.h  Text.cpp  Text.h  main.cpp
Shapes/: Action.h  Hexagon.cpp  Hexagon.h  Pentagon.cpp  Pentagon.h  Shape.cpp  Shape.h
Tools/: Eraser.h  Magnifier.h  Paint.cpp  Paint.h  Pencil.h  Tool.cpp  Tool.h
